<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#64296D">






    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"

        />

    <TextView
        android:id="@+id/typed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_toEndOf="@+id/welcome"
        android:layout_toRightOf="@+id/welcome"
        android:text="test"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choose_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_quiz"
        android:gravity="center"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"

        />

    <Button
        android:id="@+id/geography_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/choose_quiz"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:text="@string/geography_quiz"
        android:background="@drawable/geography_button"
        android:onClick="startQuiz"
        />

    <Button
        android:id="@+id/history_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/geography_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:text="@string/history_quiz"
        android:background="@drawable/history_button"
        android:onClick="startQuiz"

        />

    <Button
        android:id="@+id/science_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/history_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/science_quiz"
        android:background="@drawable/science_button"
        android:onClick="startQuiz"

        />

    <Button
        android:id="@+id/mixed_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/science_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/mixed_quiz"
        android:background="@drawable/mixed_button"
        android:onClick="startQuiz"

        />

</RelativeLayout>