<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#64296D">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/images" />
    <TextView
        android:id="@+id/type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_name"
        android:layout_below="@id/icon"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_centerHorizontal="true"


        />

    <EditText
        android:id="@+id/name"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/hint"
        android:layout_below="@+id/type_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        />

    <Button
        android:id="@+id/next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_large"
        android:layout_centerHorizontal="true"
        android:layout_height="80dp"
        android:layout_width="250dp"
        android:layout_marginTop="70dp"
        android:text="@string/next"
        android:background="@drawable/start_button"
        android:onClick="sendMessage"
        />




</RelativeLayout>